feat: add document strategies for various TipoConvenio and update LeadViewModel
- Introduced new enum TipoConvenio to represent different types of agreements.
- Created individual document strategies for INSS, SIAPE, Exército, Marinha, Governo, Prefeitura, and Aeronáutica, each providing specific checklist requirements.
- Implemented DefaultDocumentStrategy to handle default cases and ensure proper fallback.
- Enhanced LeadViewModel to support new TipoConvenio and manage document checklists effectively.
- Updated lead.fxml to include a vertical separator for better UI organization.